@@ -12,7 +12,6 @@ import static org.hamcrest.Matchers.hasEntry;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 import static org.opensearch.sql.data.model.ExprValueUtils.stringValue;
-import static org.opensearch.sql.data.type.ExprCoreType.STRING;
 
 import com.google.common.collect.ImmutableMap;
 import java.util.List;
@@ -22,8 +21,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.opensearch.sql.data.model.ExprValue;
-import org.opensearch.sql.data.type.ExprType;
 import org.opensearch.sql.opensearch.client.OpenSearchClient;
+import org.opensearch.sql.opensearch.data.type.OpenSearchDataType;
 import org.opensearch.sql.opensearch.mapping.IndexMapping;
 
 @ExtendWith(MockitoExtension.class)
@@ -32,16 +31,14 @@ class OpenSearchDescribeIndexRequestTest {
   @Mock
   private OpenSearchClient client;
 
+  @Mock
+  private IndexMapping mapping;
+
   @Test
   void testSearch() {
-    when(client.getIndexMappings("index"))
-        .thenReturn(
-            ImmutableMap.of(
-                "test",
-                new IndexMapping(
-                    ImmutableMap.<String, String>builder()
-                        .put("name", "keyword")
-                        .build())));
+    when(mapping.getFieldMappings()).thenReturn(
+        Map.of("name", OpenSearchDataType.of(OpenSearchDataType.MappingType.Keyword)));
+    when(client.getIndexMappings("index")).thenReturn(ImmutableMap.of("test", mapping));
 
     final List<ExprValue> results = new OpenSearchDescribeIndexRequest(client, "index").search();
     assertEquals(1, results.size());
@@ -56,23 +53,5 @@ class OpenSearchDescribeIndexRequestTest {
   void testToString() {
     assertEquals("OpenSearchDescribeIndexRequest{indexName='index'}",
         new OpenSearchDescribeIndexRequest(client, "index").toString());
-  }
-
-  @Test
-  void filterOutUnknownType() {
-    when(client.getIndexMappings("index"))
-        .thenReturn(
-            ImmutableMap.of(
-                "test",
-                new IndexMapping(
-                    ImmutableMap.<String, String>builder()
-                        .put("name", "keyword")
-                        .put("@timestamp", "alias")
-                        .build())));
-
-    final Map<String, ExprType> fieldTypes =
-        new OpenSearchDescribeIndexRequest(client, "index").getFieldTypes();
-    assertEquals(1, fieldTypes.size());
-    assertThat(fieldTypes, hasEntry("name", STRING));
   }
 }
